syntax = "proto3";

option go_package="streakauth/grpc";

package grpc;

service StreakAiService {
  rpc Login(LoginRequest) returns (LoginResponse) {};
  rpc Register(RegisterRequest) returns (RegisterResponse) {};

}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;

}

message RegisterRequest {
  string username = 1;
  string password = 2;
}

message RegisterResponse {
  string status = 1;
}


